Made the Shark class and made the Shark move as a bonus